--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/passport": "^1.0.11",
     "bcrypt": "^5.1.0",
+    "bcrypt-nodejs": "^0.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-flash": "^0.0.2",
